# AfterSaleFlow-Agent

./: .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
Project Plan/: AI_Native履约争端审理系统_前端交互设计技术方案_正式补充版.md  AI_Native履约争端审理系统_最终技术清单_最终版.md  AI_Native履约争端审理系统_架构与技术文档改造版.md  AI_Native履约争端审理系统_架构设计_最终版.md  AI_Native履约争端审理系统_正式版开发文档_最终版.md  AI_Native履约争端审理系统_正式版验收清单_最终版.md  AI_Native履约争端审理系统_统一配置说明_最终版.md  codex_formal_dev_doc_prompt.md  order_fulfillment_dispute_agentic_architecture.md  订单履约争议裁决系统_最终技术清单.md  订单履约争议裁决系统_正式版一次性验收清单_Codex.md  订单履约争议裁决系统_正式版开发文档_Codex主控.md  订单履约争议裁决系统_统一配置说明_Codex执行版.md
frontend/: .env.example  Dockerfile  index.html  package.json  playwright.config.js  playwright.infrastructure.test.js  pnpm-lock.yaml  pnpm-workspace.yaml  server.mjs  vite.config.js
infra-tests/: docker-compose-healthcheck.md  smoke-test-cases.md
java-api-service/: Dockerfile  pom.xml
ocr-parser-service/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
ocr-parser-service/app/: __init__.py  clients.py  config.py  main.py  models.py  parsers.py  service.py
ocr-parser-service/tests/: container_document_smoke.py  test_api.py  test_clients.py  test_parsers.py  test_service.py
python-agent-service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
scripts/: dev-down.sh  dev-local.ps1  dev-reset.sh  dev-up.sh  generate-openapi.sh  generate-secrets.ps1  generate-secrets.sh  init-db.sh  init-es.sh  init-minio.sh  smoke-test.sh  (+1 more)
(+1060 files in other folders)
